# snowflake_data_lake_workshop_streamlit_app

./: README.md  pyproject.toml  streamlit_app.py
