[tool.poetry]
name = "first_streamlit_app"
version = "0.1.0"
description = ""
authors = ["jimmybunter01 <65281539+jimmybunter01@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
streamlit = "^1.20.0"
snowflake-connector-python = "^3.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
